# MiFitness-stats

./: .gitignore  README.md  pyproject.toml
mifitness_stats/: main.py
