[tool.poetry]
name = "mifitness-stats"
version = "0.1.0"
description = ""
authors = ["lcscosta <lcscosta@disroot.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
